@@ -731,6 +731,8 @@ Tools/Demos
 Documentation
 -------------
 
+- Issue #13538: Improve str() and object.__str__() documentation.
+
 - Issue #16400: Update the description of which versions of a given package
   PyPI displays.
 
